# Groovebox

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile.py  0003_profile_bio.py  0004_alter_profile_bio_alter_profile_date_of_birth.py  0005_alter_profile_profile_photo.py
accounts/templates/accounts/: artist_register.html  base.html  login.html  profile.html  register.html
api/: permissions.py  serializers.py  urls.py  views.py
groovebox/: asgi.py  settings.py  urls.py  wsgi.py
music/: admin.py  forms.py  models.py  urls.py  views.py
music/migrations/: 0001_initial.py  0002_alter_song_artist.py
music/templates/music/: artist_details.html  home.html  playlist_creation.html  playlist_delete.html  playlist_details.html  playlist_update.html  song_creation.html  song_delete.html  song_details.html  song_update.html
